src/objects/Scoping_Task__c.object
<CustomObject>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Difference__c</fullName>
        <formula>BLANKVALUE(X90_Estimate__c, X50_Estimate__c)  - X50_Estimate__c</formula>
        <label>Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scoping_Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scoping Feature</label>
        <referenceTo>Scoping_Feature__c</referenceTo>
        <relationshipLabel>Scoping Tasks</relationshipLabel>
        <relationshipName>Scoping_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Squared_Difference__c</fullName>
        <formula>Difference__c*Difference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Squared Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X50_Estimate__c</fullName>
        <label>50% Estimate</label>
        <precision>10</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X90_Estimate__c</fullName>
        <label>90% Estimate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Scoping Task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scoping Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>